Add API to get patron profile
