# internal/lending/ports/openapi_api.gen.go
@@ -26,6 +26,9 @@ type ServerInterface interface {
 
 	// (POST /patrons/{patronId}/holds)
 	PlaceHold(w http.ResponseWriter, r *http.Request, patronId string)
+
+	// (GET /patrons/{patronId}/profile)
+	GetPatronProfile(w http.ResponseWriter, r *http.Request, patronId string)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -140,6 +143,34 @@ func (siw *ServerInterfaceWrapper) PlaceHold(w http.ResponseWriter, r *http.Requ
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.PlaceHold(w, r, patronId)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// GetPatronProfile operation middleware
+func (siw *ServerInterfaceWrapper) GetPatronProfile(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "patronId" -------------
+	var patronId string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "patronId", runtime.ParamLocationPath, chi.URLParam(r, "patronId"), &patronId)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "patronId", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{""})
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetPatronProfile(w, r, patronId)
 	})
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -273,6 +304,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/patrons/{patronId}/holds", wrapper.PlaceHold)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/patrons/{patronId}/profile", wrapper.GetPatronProfile)
 	})
 
 	return r
